  length). (Tony)
- Fixed bug #39613 (Possible segfault in imap initialization due to missing 
  module dependency). (wharmby at uk dot ibm dot com, Tony)
- Fixed bug #39602 (Invalid session.save_handler crashes PHP). (Dmitry)
- Fixed bug #39583 (ftp_put() does not change transfer mode to ASCII). (Tony)
- Fixed bug #39576 (array_walk() doesn't separate userdata zval). (Tony)
- Fixed bug #39564 (PDO::errorInfo() returns inconsistent information when 
  sqlite3_step() fails). (Tony)
- Fixed bug #39548 (ZMSG_LOG_SCRIPT_NAME not routed to OutputDebugString()
  on Windows). (Dmitry)
- Fixed bug #39538 (fgetcsv can't handle starting newlines and trailing odd
  number of backslashes). (David Soria Parra, Pierre)
- Fixed bug #39534 (Error in maths to calculate of
  ZEND_MM_ALIGNED_MIN_HEADER_SIZE). (wharmby at uk dot ibm dot com, Dmitry)
- Fixed bug #39527 (Failure to retrieve results when multiple unbuffered,
  prepared statements are used in pdo_mysql). (Ilia)
- Fixed bug #39483 (Problem with handling of \ char in prepared statements).
  (Ilia, suhachov at gmail dot com)
- Fixed bug #39458 (ftp_nlist() returns false on empty dirs). (Nuno)
- Fixed bug #39454 (Returning a SOAP array segfaults PHP). (Dmitry)
- Fixed bug #39445 (Calling debug_backtrace() in the __toString() function
  produces a crash). (Dmitry)
- Fixed bug #39438 (Fatal error: Out of memory). (Dmitry)
- Fixed bug #39414 (Syntax error while compiling with Sun Workshop Complier).
  (Johannes)
- Fixed bug #39398 (Booleans are not automatically translated to integers).
  (Ilia)
- Fixed bug #39366 (imagerotate does not use alpha with angle > 45°) (Pierre)
- Fixed bug #39362 (Added an option to imap_open/imap_reopen to control the 
  number of connection retries). (Ilia)
- Fixed bug #39350 (crash with implode("\n", array(false))). (Ilia)
- Fixed bug #39273 (imagecopyresized may ignore alpha channel) (Pierre)
- Fixed bug #39364 (Removed warning on empty haystack inside mb_strstr()).
  (Ilia)